# lpd-claude-code-monitor

./: .adk_session.json  .claude_sessions.json  .dlq_investigation_trigger  .editorconfig  .env.template  .gitignore  .pre-commit-config.yaml  AUTO_INVESTIGATION_GUIDE.md  CHANGELOG.md  CLAUDE.md  ENHANCED_AUTO_INVESTIGATION.md  ENHANCED_DASHBOARD.md  LICENSE  Makefile  ORGANIZATION.md  PROJECT_STRUCTURE.md  PR_AUDIO_NOTIFICATIONS.md  README.md  check_investigation_status.py  claude_status_monitor.py  cli.py  demo_dlq_monitor.py  dlq_monitor.py  gunicorn_config.py  make_executable.sh  manual_investigation.py  neurocenter.sh  pyproject.toml  pytest.ini  quick_github_setup.py  requirements-dev.txt  requirements-test.txt  requirements.txt  requirements_adk.txt  run_limited_monitor.py  run_production.py  run_production_monitor.py  setup.cfg  setup_github.sh  setup_pr_audio.sh  (+8 more)
.claude/: .claude_sessions.json
.claude/agents/: code-reviewer.md  debugger.md  dlq-analyzer.md
.claude/commands/: adk.md  claude_subagent.md  generate-docs.md  prime.md  sync-project.md  update-claude-md.md  update-memory.md
adk_agents/: __init__.py  code_fixer.py  coordinator.py  dlq_monitor.py  investigator.py  notifier.py  pr_manager.py
config/: .env.template  adk_config.yaml  config.yaml  mcp_settings.json
config/python/: MANIFEST.in
config/testing/: .coveragerc  tox.ini
docs/: COMMAND_REFERENCE.md  LPD_HIVE_BRAND_GUIDELINES.md  README-ADK.md  RELEASE_NOTES_MCP_ENHANCEMENTS.md  TROUBLESHOOTING.md  adk-agents-guide.md  adk-architecture.md  improvements.md  index.md  investigation-enhancements.md  mcp-integration-guide.md  neurocenter.md  setup-deployment-guide.md
docs/api/: README.md  core-monitor.md
docs/development/: README.md  architecture.md  enhanced-auto-investigation.md
docs/guides/: README.md  auto-investigation.md  dashboard-usage.md  pr-audio-notifications.md  setup-guide.md  status-monitoring.md  troubleshooting.md
docs/project/: .docs-manifest.md  CHANGELOG.md  PROJECT_STRUCTURE.md  README.md
docs/tests/: __init__.py
docs/tests/fixtures/: __init__.py  sample_claude_sessions.json  sample_queue_attributes.json
docs/tests/integration/: test_auto_investigation.py  test_claude_code.py  test_enhanced_investigation.py
docs/tests/mocks/: github_mocks.py
docs/tests/unit/: test_pr_audio.py  test_voice.py
generated-docs/: BACKEND.md  FRONTEND.md  repomix_output.xml
lpd-neurocenter-next/: next.config.js  package-lock.json  package.json  tailwind.config.ts
lpd-neurocenter-next/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
lpd-neurocenter-next/src/app/api/flask/api/active-investigations/: route.ts
lpd-neurocenter-next/src/app/api/flask/api/dlqs/: route.ts
lpd-neurocenter-next/src/app/api/flask/api/investigate/: route.ts
lpd-neurocenter-next/src/app/api/flask/api/logs/: route.ts
lpd-neurocenter-next/src/app/logs/: page.tsx
lpd-neurocenter-next/src/components/layout/: QuickAccessToolbar.tsx  TabNavigation.tsx  Topbar.tsx
lpd-neurocenter-next/src/components/panels/: AITerminalPanel.tsx  AWSSQSMonitorPanel.tsx  DeadLetterQueuesPanel.tsx  GlassRoomPanel.tsx  InvestigationTimelinePanel.tsx  LiveAgentPanel.tsx  ObserveModePanel.tsx
lpd-neurocenter-next/src/components/ui/: badge.tsx  button.tsx  card.tsx
lpd-neurocenter-next/src/lib/: tokens.ts
lpd-neurocenter-next/src/services/: websocket.ts
pr_notifier/: __init__.py  pr_audio_monitor.py
requirements/: requirements_adk.txt
scripts/: README.md  check_status.sh  fix_permissions.sh  killmon.sh  make_executable.sh  setup_pr_audio.sh  start_clean.sh  start_dashboard.sh  start_integrated.sh  start_monitor.sh  start_web.sh  start_with_github.sh  status.sh  stop_all.sh  test_monitoring.py
scripts/launch/: neurocenter.sh  neurocenter_clean.sh  start_dashboard.sh  start_flask_production.sh  start_integrated.sh  stop_all.sh
scripts/launchers/: dashboard.sh  launch.sh  launcher.sh  neurocenter.sh  start_neurocenter_next.sh  start_services.sh  start_web_clean.sh  start_web_dashboard.sh  web.sh
scripts/monitoring/: adk_monitor.py  adk_monitor_wrapper.py  adk_production_monitor.py  run_adk_monitor.sh  run_clean.sh
scripts/setup/: fix_ssl.py  quick_setup.sh  set_ssl_env.sh  suppress_blake2_warnings.py
scripts/web/: run_neurocenter.py  start_web.py
src/dlq_monitor/: __init__.py  py.typed
src/dlq_monitor/claude/: __init__.py  live_monitor.py  manual_investigation.py  session_manager.py  status_checker.py
src/dlq_monitor/core/: __init__.py  monitor.py  optimized_monitor.py
src/dlq_monitor/dashboards/: __init__.py  corrections.py  enhanced.py  fixed_enhanced.py  legacy_monitor.py  ultimate.py
src/dlq_monitor/database/: neurocenter.db
src/dlq_monitor/models/: __init__.py  neurocenter_models.py
src/dlq_monitor/notifiers/: __init__.py  macos_notifier.py  pr_audio.py  voice_check.py
src/dlq_monitor/services/: __init__.py  database_service.py  investigation_service.py
src/dlq_monitor/utils/: __init__.py  aws_sqs_helper.py  github_integration.py  github_setup.py  production_monitor.py
src/dlq_monitor/web/: README.md  app.py  requirements.txt  run_silent.py  run_web.py
src/dlq_monitor/web/static/css/: dashboard.css  lpd-hive.css  neurocenter-modern.css  neurocenter.css  queue-monitor.css
src/dlq_monitor/web/static/js/: dashboard.js  neurocenter-modern.js  neurocenter.js
src/dlq_monitor/web/templates/: dashboard.html  neurocenter-modern.html  neurocenter.html
src/lpd_claude_code_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: README.md  conftest.py  test_investigator_mcp.py  test_monitoring_fix.py  test_neurocenter.py  test_voice_id.py
tests/fixtures/: sample_config.yaml  sample_dlq_messages.json
tests/integration/: test_adk_system.py  test_neurocenter_services.py
tests/mocks/: __init__.py  aws_mocks.py  notification_mocks.py
tests/unit/: test_all_audio.py  test_notification.py
tests/validation/: test_adk_simple.py
