[metadata]
name = lpd-claude-code-monitor
version = 1.0.0
author = Fabio Santos
author_email = fabio.santos@example.com
description = AWS SQS Dead Letter Queue Monitor with Claude AI auto-investigation capabilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fabiosantos/lpd-claude-code-monitor
project_urls =
    Bug Tracker = https://github.com/fabiosantos/lpd-claude-code-monitor/issues
    Documentation = https://github.com/fabiosantos/lpd-claude-code-monitor/docs
    Source Code = https://github.com/fabiosantos/lpd-claude-code-monitor
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: System :: Monitoring
    Topic :: System :: Systems Administration

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    boto3>=1.34.0
    PyYAML>=6.0
    click>=8.0.0
    rich>=13.0.0
    dataclasses-json>=0.6.0
    requests>=2.31.0
    pygame>=2.5.0
    psutil>=5.9.0
include_package_data = True
zip_safe = False

[options.packages.find]
where = src
include = dlq_monitor*
exclude = tests*

[options.package_data]
dlq_monitor = 
    config/*.yaml
    config/*.yml
    docs/*.md
    scripts/*.sh

[options.extras_require]
dev = 
    pytest>=7.0
    black>=23.0
    ruff>=0.1.0
    mypy>=1.0
    coverage>=7.0
    pre-commit>=3.0
    build>=0.10
    twine>=4.0
test = 
    pytest>=7.0
    pytest-cov>=4.0
    pytest-mock>=3.10
    pytest-asyncio>=0.21
    moto>=4.2

[options.entry_points]
console_scripts =
    dlq-monitor = dlq_monitor.cli:cli
    dlq-dashboard = dlq_monitor.dashboards.enhanced:main
    dlq-investigate = dlq_monitor.claude.manual_investigation:main
    dlq-setup = dlq_monitor.utils.github_setup:main

# Pytest configuration
[tool:pytest]
minversion = 7.0
testpaths = tests
python_files = test_*.py *_test.py
python_classes = Test*
python_functions = test_*
addopts = 
    -ra
    -q
    --strict-markers
    --strict-config
    --cov=src/dlq_monitor
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    unit: marks tests as unit tests

# Coverage configuration
[coverage:run]
source = src
branch = True
omit = 
    */tests/*
    */test_*.py
    */__pycache__/*
    */venv/*
    */migrations/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    class .*\bProtocol\):
    @(abc\.)?abstractmethod
ignore_errors = True

[coverage:html]
directory = htmlcov

# Flake8 configuration
[flake8]
max-line-length = 88
extend-ignore = 
    E203,  # whitespace before ':'
    E501,  # line too long
    W503,  # line break before binary operator
exclude = 
    .git,
    __pycache__,
    .venv,
    venv,
    .eggs,
    *.egg,
    build,
    dist,
    .tox,
    .mypy_cache,
    .pytest_cache
per-file-ignores =
    __init__.py:F401

# MyPy configuration
[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True

[mypy-boto3.*]
ignore_missing_imports = True

[mypy-botocore.*]
ignore_missing_imports = True

[mypy-pygame.*]
ignore_missing_imports = True

[mypy-psutil.*]
ignore_missing_imports = True

[mypy-dataclasses_json.*]
ignore_missing_imports = True

# isort configuration
[isort]
profile = black
multi_line_output = 3
line_length = 88
known_first_party = dlq_monitor
known_third_party = boto3,botocore,click,rich,yaml,pygame,psutil,dataclasses_json
skip = venv,.venv,.git,__pycache__,.mypy_cache,.pytest_cache